infra/k8s/remote/user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: gcr.io/fed-dev-343215/user

---
apiVersion: v1
kind: Service
metadata:
  name: user-srv
spec:
  selector:
    app: user
  ports:
    - name: user
      protocol: TCP
      port: 4002
      targetPort: 4002

---
apiVersion: v1
kind: Service
metadata:
  name: user-node-srv
spec:
  type: NodePort
  selector:
    app: user
  ports:
    - name: user
      protocol: TCP
      port: 4002
      targetPort: 4002
      nodePort: 30110
