infra/k8s/remote/vpp-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpp-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpp-mongo
  template:
    metadata:
      labels:
        app: vpp-mongo
    spec:
      containers:
        - name: vpp-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: vpp-mongo-srv
spec:
  selector:
    app: vpp-mongo
  ports:
    - name: vpp-db
      protocol: TCP
      port: 27017
      targetPort: 27017
      
---
apiVersion: v1
kind: Service
metadata:
  name: vpp-mongo-node-srv
spec:
  type: NodePort
  selector:
    app: vpp-mongo 
  ports:
    - name: vpp 
      protocol: TCP
      port: 27017 
      targetPort: 27017 
      nodePort: 30017
