infra/k8s/remote/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: swfed.dev
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: cars-client-srv
                port:
                  number: 3000
          - path: /chargers(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: charger-srv
                port:
                  number: 4000
          - path: /cars(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: car-srv
                port:
                  number: 4001
          - path: /users(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: user-srv
                port:
                  number: 4002
          - path: /graphql(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: esl-query-srv
                port:
                  number: 4003
#  tls:
#    - hosts:
#        - local.swgql.com
#      secretName: my-tls-secret
